RESOLVED FIXED150522
[EFL] Fix a wrong enum variable use
https://bugs.webkit.org/show_bug.cgi?id=150522
Summary [EFL] Fix a wrong enum variable use
Gyuyoung Kim
Reported 2015-10-23 17:17:35 PDT
In EwkView::requestPopupMenu a wrong case constant variable has been used. *textDirection* is a type of WKPopupItemTextDirection though, we have used a constant of Ewk_Text_Direction. This is wrong.
Attachments
Patch (1.50 KB, patch)
2015-10-23 17:18 PDT, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2015-10-23 17:18:25 PDT
WebKit Commit Bot
Comment 2 2015-10-24 13:05:23 PDT
Comment on attachment 263964 [details] Patch Clearing flags on attachment: 263964 Committed r191536: <http://trac.webkit.org/changeset/191536>
WebKit Commit Bot
Comment 3 2015-10-24 13:05:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.