[EFL] Fix a wrong enum variable use https://bugs.webkit.org/show_bug.cgi?id=150522

Reviewed by Csaba Osztrogonác.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::requestPopupMenu):
Use kWKPopupItemTextDirectionLTR instead of EWK_TEXT_DIRECTION_LEFT_TO_RIGHT.


Canonical link: https://commits.webkit.org/168683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191536 268f45cc-cd09-0410-ab3c-d52691b4dbfc